<resources>
    <string name="app_name">ICS4UI-APP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_day_day_fragment">Day 0</string>
    <string name="placeholder_time_day_fragment">Start time -\n End time</string>
    <string name="placeholder_title_day_fragment">Title</string>
    <string name="fragment_day_close">close</string>
    <string name="fragment_add_event_cancel">cancel</string>
    <string name="element_text">element_text</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="today">Today</string>
    <string name="announcements">Announcements</string>
    <string name="clubs_amp_groups"><![CDATA[Clubs & Groups]]></string>
    <string name="edss_instagram"><a href="https://www.instagram.com/elmira_lancers/?hl=en">EDSS Instagram</a></string>
    <string name="web_client_id">945443037655-3ctseur9ahl88mgajsku0h4ippu0k779.apps.googleusercontent.com</string>
    <string name="displayname">Display Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="end_time">End Time</string>
    <string name="textview">TextView</string>
    <string name="eventTitleText">Event title</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="start">Start:</string>
    <string name="title">Title:</string>
    <string name="add_event">Add Event</string>
    <string name="all_day">All day:</string>
    <string name="end">End:</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="clubs_groups">Clubs/Groups:</string>
    <string name="create_event">Create Event</string>
    <string name="start_time">Start Time</string>
    <string name="club_group_selection">Club/Group Selection</string>
    <string name="apply">APPLY</string>
    <string name="search">Search</string>
    <string name="tempTime">00:00 - 00:00</string>
    <string name="fillerTitle">Filler Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="calendarWeekDays" />
    <string name="sunday"><font color="#F9FFEE">S</font></string>
    <array name="weekdays_custom">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>@string/sunday</item>
    </array>
    <string name="clubs_groups_manager">Clubs/Groups Manager</string>
    <string name="select_clubs_groups">Select Clubs/Groups</string>
    <string name="add_announcements">Add Announcements</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="manage_clubs_groups">Manage Clubs/Groups</string>
    <string name="remove_announcements">Remove Announcements</string>
    <string name="add_member_s">Add Member(s)</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="create_club_group">Create Club/Group</string>
</resources>