<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ics4ui.android.DayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/event_day"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/placeholder_day_day_fragment"
            android:textAlignment="textStart"
            android:textColor="@color/darkPurple"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:text="@string/placeholder_time_day_fragment"
            android:textColor="@color/darkPurple"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_day" />

        <TextView
            android:id="@+id/dayFragmentEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="35dp"
            android:text="@string/eventTitleText"
            android:textColor="@color/darkPurple"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_day" />

        <TextView
            android:id="@+id/dayFragmentLine"
            android:layout_width="400dp"
            android:layout_height="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/underline"
            android:textColor="@color/buttonPurple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_time" />

        <Button
            android:id="@+id/day_close"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/fragment_day_close"
            android:textColor="#000000"
            android:textSize="12sp"
            android:background="@drawable/close_button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="409dp"
            android:layout_height="538dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="192dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>